--- a/style.css
+++ b/style.css
@@ -21,3 +21,30 @@
   display:flex;
   justify-content: space-between;
 }
+
+p, a {
+font-family:arial, sans-serif;
+line-height: 24px;
+font-weight: 400;
+font-size: 13px;
+color: rgba(0, 0, 0, 0.87);
+text-decoration: none;
+}
+
+.hypertexte a:hover {
+text-decoration: underline;
+}
+
+input[type=Search] {
+background-color: #fff;
+height: 44px;
+vertical-align: top;
+border-radius: 2px;
+box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16),0 0 0 1px rgba(0,0,0,0.08);
+transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
+max-width: 584px;
+display: flex;
+justify-content: center;
+}
+
+
