--- a/style.css
+++ b/style.css
@@ -1,25 +1,9 @@
-.logo {
-  text-align: center;
+/*CSS GLOBAL*/
 
-}
-
-.boutons {
-  display: inline-block;
-}
-
-.english {
-  text-align: center;
-}
-
-.haut {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-  }
-
-.footer {
-  display:flex;
-  justify-content: space-between;
+html {
+  height: 100%;
+  margin: 0;
+  font-size: small;
 }
 
 p, a {
@@ -32,19 +16,88 @@ text-decoration: none;
 }
 
 .hypertexte a:hover {
-text-decoration: underline;
+  text-decoration: underline;
+  cursor: pointer;
+  }
+
+/*NAV*/
+.haut {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 2%;
+  }
+
+.haut a {
+  padding-left : 15px;
+
+
+}
+
+/*MAIN*/
+.logo {
+  text-align: center;
+  padding-top: 109px;
+  padding-bottom: 25px;
+}
+
+.boutons {
+  display: inline-block;
+  background-color: #F8F8F8;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  max-height: 40px;
+  margin-top: 15px;
+
+}
+
+.boutons a:hover {
+  color: black;
+  border-color: gray;
+}
+
+.english {
+  text-align: center;
+  padding-top: 10px;
+  margin-bottom: 60px;
+}
+
+.english a {
+  color: blue;
 }
 
 input[type=Search] {
-background-color: #fff;
-height: 44px;
-vertical-align: top;
-border-radius: 2px;
-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16),0 0 0 1px rgba(0,0,0,0.08);
-transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
-max-width: 584px;
-display: flex;
-justify-content: center;
+  background-color: #fff;
+  height: 44px;
+  vertical-align: top;
+  border-radius: 2px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16),0 0 0 1px rgba(0,0,0,0.08);
+  transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
+  max-width: 584px;
+  display: flex;
+  justify-content: center;
 }
 
+/*FOOTER*/
+.footer {
+  display:flex;
+  justify-content: space-between;
+  background: #f2f2f2;
+  border-top: 1px solid #e4e4e4;
+  padding-right: 1%;
+  max-height: 50px;
+  align-items: flex-end;
+}
 
+footer p {
+  color: rgba(0, 0, 0, 0.54);
+  font-size: 15px;
+}
+
+footer a {
+    color: rgb(102, 102, 102);
+    line-height: 40px;
+    padding-left: 10px;
+  }
