--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 /*CSS GLOBAL*/
 
-html {
-  height: 100%;
+body {
   margin: 0;
-  font-size: small;
+  padding: 0;
 }
 
 p, a {
@@ -41,8 +40,7 @@ text-decoration: none;
   padding-bottom: 25px;
 }
 
-.boutons {
-  display: inline-block;
+.button {
   background-color: #F8F8F8;
   padding-left: 10px;
   padding-right: 10px;
@@ -50,10 +48,13 @@ text-decoration: none;
   margin-right: 5px;
   max-height: 40px;
   margin-top: 15px;
+  border: none;
+  color: gray;
+  font-weight: 700;
 
 }
 
-.boutons a:hover {
+.button:hover {
   color: black;
   border-color: gray;
 }
@@ -75,9 +76,11 @@ input[type=Search] {
   border-radius: 2px;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16),0 0 0 1px rgba(0,0,0,0.08);
   transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
-  max-width: 584px;
+  width: 584px;
   display: flex;
   justify-content: center;
+  border: none;
+  padding-left: 10px;
 }
 
 /*FOOTER*/
